@@ -4,3 +4,10 @@ Dalla root del repository:
 ```
 node ./scripts/create-favicons/index.mjs --dir=./test/create-favicons-test
 ```
+
+
+Da questa dir:
+
+```
+node ../../scripts/create-favicons/index.mjs
+```
