@@ -43,3 +43,4 @@
 2023-05-29T13:39:40.036Z |           1.15.4 | create-favicons fix
 2023-05-29T14:31:22.411Z |           1.16.0 | create-favicons: opzione `null` per snippet file
 2023-05-29T18:31:40.550Z |           1.16.1 | upd
+2023-05-30T09:17:02.151Z |           1.16.2 | Create-favicons: personalizzazione parametri output
